# ImApp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
.github/workflows/: build.yml  ci.yml
cmake/: CMakeLists.txt  Dependencies.cmake  ImAppConfig.cmake.in  ImGuiCMakeGenerator.cmake
conan-recipe/: conandata.yml  conanfile.py  create.bat
consuming-example/cmake-install/: main.cpp
consuming-example/fetch-content/: CMakeLists.txt
examples/: CMakeLists.txt  DockSpaceMainWindow.cpp  HelloWorld.cpp  LocaleExplorer.cpp  MainWindowContent.cpp  NoClose.cpp
examples/consuming/cmake-install/: CMakeLists.txt  build.bat  main.cpp
examples/consuming/conan/: CMakeLists.txt  conanfile.txt  main.cpp
examples/consuming/fetch-content/: CMakeLists.txt  main.cpp
include/ImApp/: Application.hpp  ImApp.hpp  ImApp.inl  Utils.hpp
src/: Application.cpp  CMakeLists.txt  Context.cpp  Context.hpp  ImApp.cpp  ImAppWindows.cpp  ImGuiImplGlfw.cpp  ImGuiImplOpenGl3.cpp  SystemSpecific.hpp  SystemSpecificDefault.cpp  SystemSpecificWin32.cpp
tests/: CMakeLists.txt  Simple.cpp
